fix(queue): resolve session registry race conditions and security issues
- CR-001: Use computeIfPresent for atomic empty-set removal
- CR-002: Use authenticated Principal instead of URL-parsed userId
- CR-003: Reference counting for multi-session same user support
- CR-004: O(1) isConnected via userSessions reverse index
- CR-005: Return immutable Set.copyOf from getSubscribedUsers
- CR-006: Clean up FQCN imports in WebSocketConfig
- Add concurrency test and multi-session disconnect test

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>